--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,10 +1,12 @@
+
 .header {
   display: flex;
   position: fixed;
-  height: 60px;
+  justify-content: space-between;
+  height: 80px;
   top: 0;
   width: 100vw;
-  padding-top: 15px;
+  align-items: center;
   z-index: 100;
   background-color: white;
 }
@@ -31,9 +33,31 @@
   display: flex;
   justify-content: flex-end;
   text-transform: uppercase;
+  align-items: center;
   margin-right: 15px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.first-child{
+  color: black;
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+}
+.second-child{
+  border-radius: 10px;
+  background-color: black;
+  color: white;
+  height: 100%;
+  font-weight:  200;
+  border: 2px solid black;
+  transition: 0.3s;
+  padding: 15px;
+}
+.second-child:hover{
+  background-color: white;
+  color: black;
+  border: 2px solid black;
+  
 }
 
-.header__right > p {
-  margin: 20px;
-}
