--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 * {
   margin: 0;
   -ms-overflow-style: none;
+  box-sizing: border-box;
 }
 ::-webkit-scrollbar {
   display: none;
